fix glimmer image sizing, add favicon, fix navbar sizing on mobile, change RECENT WORK on artist page, add spacing to edition and artist components, and change homnepage image.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -516,3 +516,14 @@ table th {
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 510px) {
+  .nav-item {
+    font-size: 0.9rem;
+  }
+  .navbar {
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 150px;
+  }
+}
