--- a/client/src/components/editions/Editions.css
+++ b/client/src/components/editions/Editions.css
@@ -5,3 +5,7 @@
   justify-content: center;
   margin-bottom: 3rem;
 }
+
+.edition-body {
+  margin-bottom: 2rem;
+}
